# api/docs/swagger.json
@@ -41,6 +41,13 @@
                         "name": "page",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "search",
+                        "description": "search",
+                        "name": "search",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -306,6 +313,13 @@
                         "name": "page",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "search",
+                        "description": "page of req",
+                        "name": "page",
+                        "in": "query"
                     }
                 ],
                 "responses": {
