# api/handler/comingTableProduct.go
@@ -135,8 +135,10 @@ func (h *Handler) DeleteComingTableProduct(c *gin.Context) {
 // @Tags         comingTableProducts
 // @Accept       json
 // @Produce      json
-// @Param        limit    query     integer  true  "limit for response"  Default(10)
-// @Param        page    query     integer  true  "page of req"  Default(1)
+// @Param        limit      query   integer  true   "limit for response"  Default(10)
+// @Param        page       query   integer  true   "page of req"  Default(1)
+// @Param        category   query   string   false  "search category"
+// @Param        barcode    query   string   false  "search barcode"
 // @Success      200  {object}  models.GetAllComingTableProduct
 // @Failure      400  {object}  response.ErrorResp
 // @Failure      404  {object}  response.ErrorResp
@@ -158,9 +160,10 @@ func (h *Handler) GetAllComingTableProduct(c *gin.Context) {
 	}
 
 	resp, err := h.strg.ComingTableProduct().GetAllComingTableProduct(models.GetAllComingTableProductRequest{
-		Page:   page,
-		Limit:  limit,
-		Search: c.Query("search"),
+		Page:     page,
+		Limit:    limit,
+		Category: c.Query("category"),
+		Barcode:  c.Query("barcode"),
 	})
 	if err != nil {
 		h.log.Error("error ComingTableProduct GetAll:", logger.Error(err))
