# api/handler/remaining.go
@@ -135,8 +135,11 @@ func (h *Handler) DeleteRemaining(c *gin.Context) {
 // @Tags         remainings
 // @Accept       json
 // @Produce      json
-// @Param        limit    query     integer  true  "limit for response"  Default(10)
-// @Param        page    query     integer  true  "page of req"  Default(1)
+// @Param        limit      query   integer  true   "limit for response"  Default(10)
+// @Param        page       query   integer  true   "page of req"         Default(1)
+// @Param        branch     query   string   false  "search branch"
+// @Param        category   query   string   false  "search category"
+// @Param        barcode    query   string   false  "search barcode"
 // @Success      200  {object}  models.GetAllRemaining
 // @Failure      400  {object}  response.ErrorResp
 // @Failure      404  {object}  response.ErrorResp
@@ -158,9 +161,11 @@ func (h *Handler) GetAllRemaining(c *gin.Context) {
 	}
 
 	resp, err := h.strg.Remaining().GetAllRemaining(models.GetAllRemainingRequest{
-		Page:   page,
-		Limit:  limit,
-		Search: c.Query("search"),
+		Page:     page,
+		Limit:    limit,
+		Branch:   c.Query("branch"),
+		Category: c.Query("category"),
+		Barcode:  c.Query("barcode"),
 	})
 	if err != nil {
 		h.log.Error("error Remainig GetAll:", logger.Error(err))
